# api/swagger.json
@@ -11,6 +11,10 @@
     {
       "name": "user",
       "description": "Operaciones sobre el usuario"
+    },
+    {
+      "name": "auth",
+      "description": "Operaciones sobre la autenticación"
     }
   ],
   "schemes": [
@@ -57,6 +61,34 @@
           }
         }
       }
+    },
+    "/auth/login": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "summary": "autentificación",
+        "description": "verifica y autentifica, si hay alguna coincidencia devuelve su contenido.",
+        "operationId": "authUser",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Request Body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Auth"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      }
     }
   },
   "securityDefinitions": {
@@ -82,6 +114,17 @@
         "name": {
           "type": "string"
         },
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "Auth": {
+      "type": "object",
+      "properties": {
         "username": {
           "type": "string"
         },
